# npov-drift-detector

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
data/labeled/: stance_gold.jsonl
docs/: stance_labeling_rubric.md
scripts/: phase1_demo.py  phase2_demo.py  phase2_validate.py  phase3_demo.py  phase4_build_reference.py  phase5_demo.py  phase6_validate.py
src/npov_drift/: __init__.py  config.py  embedding.py  models.py
src/npov_drift/dashboard/: __init__.py  report.py
src/npov_drift/ingest/: __init__.py  api_client.py  article_type.py  cache.py  parsing.py  pipeline.py  revisions.py  sampling.py
src/npov_drift/onset/: __init__.py  baseline.py  changepoint.py  detect.py
src/npov_drift/reference/: __init__.py  build.py  corpus.py  profile.py
src/npov_drift/series/: __init__.py  clusters.py  section_drift.py  section_share.py  stance_series.py  util.py
src/npov_drift/stance/: __init__.py  aggregate.py  base.py  nli.py  sentences.py  stub.py  topic.py
src/npov_drift/validation/: __init__.py  evaluate.py  pov_tags.py
tests/: conftest.py  test_aggregate_gating.py  test_api_client.py  test_article_type.py  test_baseline.py  test_cache.py  test_changepoint.py  test_clusters.py  test_corpus.py  test_embedding.py  test_evaluate.py  test_nli_decision.py  test_onset_detect.py  test_parsing.py  test_pov_tags.py  test_profile.py  test_report.py  test_revisions.py  test_sampling.py  test_section_drift.py  test_section_share.py  test_sentences.py  test_stance_series.py  test_stance_stub.py  test_topic.py
